# empty-cpp-project

./: .gitignore  CMakeLists.txt  CmakeLists.txt  LICENSE  README.md  conanfile.txt
include/: dlib.hpp  slib.hpp
src/: dlib.cpp  exec.cpp  main.cpp  slib.cpp
